Fix navbar overlapping scrollbar
Removes width and height specifications from html, body tags

--- a/css/main.scss
+++ b/css/main.scss
@@ -61,8 +61,6 @@ html, body {
 	font-size: 16px;
     position: relative;
     text-decoration: none;
-	height: 100%;
-	width: 100%;
   margin: 0;
 }
 
